# Files-and-folder-directory

./: .gitignore  LICENSE  README.md  directory_tool.py  index.html  package-lock.json  package.json  pyproject.toml
directory_tool/: __init__.py  core.py  gui.py
src/: App.tsx  index.css
src/components/: AIConfigDialog.tsx  FileExplorerTab.tsx  HistoryDialog.tsx  MoveFilesTab.tsx  OrganizeTab.tsx  ProgressDialog.tsx  StructureTab.tsx  TemplatesTab.tsx
src/components/enhanced/: EnhancedStructureTab.tsx  SmartOrganizeTab.tsx
src/context/: DirectoryContext.tsx
src/hooks/: useAI.ts  useFileOperations.ts
tests/: test_directory_tool.py
