[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "directory_tool"
version = "1.0.0"
authors = [
  { name="jigar48949", email="jigar48949@example.com" },
]
description = "A modern directory management and organization tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ttkthemes>=3.2.2",
    "thefuzz>=0.19.0",
    "python-Levenshtein>=0.21.1",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
]

[project.urls]
"Homepage" = "https://github.com/jigar48949/directory-tool"
"Bug Tracker" = "https://github.com/jigar48949/directory-tool/issues"